tests/errors/syntax/expected_semi_in_for_specifier.c
// Expected ';' in 'for' statement specifier
void main()
{
	int i;
	for (i = 0; i < 10 i++);
}
